--- a/Injoy_IDG_new_push/ICEForce/ICEFORECBaseView/ICEFORCEWork/SubViews/QZProject/View/ICEFORCEPerAndGupTableViewCell.xib
+++ b/Injoy_IDG_new_push/ICEForce/ICEFORECBaseView/ICEFORCEWork/SubViews/QZProject/View/ICEFORCEPerAndGupTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -33,7 +33,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wcM-7r-RBg">
-                                <rect key="frame" x="76" y="9" width="224" height="20"/>
+                                <rect key="frame" x="76" y="9" width="181" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="ptU-f7-1hm"/>
                                 </constraints>
@@ -50,8 +50,8 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j2D-Ef-yUM">
-                                <rect key="frame" x="76" y="36.5" width="30" height="25"/>
+                            <button opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j2D-Ef-yUM">
+                                <rect key="frame" x="76" y="37.5" width="30" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="jEi-jl-mcN"/>
                                 </constraints>
@@ -59,6 +59,13 @@
                                 <state key="normal">
                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                            </button>
+                            <button opaque="NO" tag="102" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xrW-qk-b4d">
+                                <rect key="frame" x="265" y="15" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="R8m-BZ-0ka"/>
+                                    <constraint firstAttribute="height" constant="20" id="ngf-43-dps"/>
+                                </constraints>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.96470588235294119" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
@@ -68,11 +75,13 @@
                             <constraint firstItem="j2D-Ef-yUM" firstAttribute="centerY" secondItem="S5z-LB-Mmx" secondAttribute="centerY" id="5dR-oc-MJ1"/>
                             <constraint firstItem="LIJ-ZV-VcX" firstAttribute="centerY" secondItem="S5z-LB-Mmx" secondAttribute="centerY" id="6mb-vf-l26"/>
                             <constraint firstItem="wcM-7r-RBg" firstAttribute="top" secondItem="S5z-LB-Mmx" secondAttribute="top" constant="9" id="7an-Uf-CcL"/>
+                            <constraint firstItem="xrW-qk-b4d" firstAttribute="leading" secondItem="wcM-7r-RBg" secondAttribute="trailing" constant="8" id="ICn-dm-R4g"/>
                             <constraint firstItem="j2D-Ef-yUM" firstAttribute="leading" secondItem="LIJ-ZV-VcX" secondAttribute="trailing" constant="15" id="KCk-as-dhL"/>
+                            <constraint firstItem="xrW-qk-b4d" firstAttribute="top" secondItem="S5z-LB-Mmx" secondAttribute="top" constant="15" id="Ton-PW-e9y"/>
                             <constraint firstItem="wcM-7r-RBg" firstAttribute="leading" secondItem="LIJ-ZV-VcX" secondAttribute="trailing" constant="15" id="W24-2F-x8M"/>
                             <constraint firstItem="LIJ-ZV-VcX" firstAttribute="leading" secondItem="S5z-LB-Mmx" secondAttribute="leading" constant="15" id="aAv-ms-xgZ"/>
                             <constraint firstAttribute="trailing" secondItem="xzv-K9-PBL" secondAttribute="trailing" id="atk-5y-fLd"/>
-                            <constraint firstAttribute="trailing" secondItem="wcM-7r-RBg" secondAttribute="trailing" id="ep3-Fz-LpK"/>
+                            <constraint firstAttribute="trailing" secondItem="xrW-qk-b4d" secondAttribute="trailing" constant="15" id="xZT-qW-eN3"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -88,6 +97,7 @@
                 <outlet property="contentText" destination="xzv-K9-PBL" id="3ec-BC-Ohs"/>
                 <outlet property="projectName" destination="wcM-7r-RBg" id="tpl-Tj-sEA"/>
                 <outlet property="projectState" destination="LIJ-ZV-VcX" id="ehH-7z-tjz"/>
+                <outlet property="starButton" destination="xrW-qk-b4d" id="dhe-dk-bYW"/>
                 <outlet property="stateButton" destination="j2D-Ef-yUM" id="8zt-Qj-VJF"/>
             </connections>
             <point key="canvasLocation" x="-3" y="71"/>
